Fix BP accession Id format
