# docs/openapi.yml
@@ -1948,6 +1948,12 @@ paths:
       tags:
         - File
       summary: Post files for a project
+      parameters:
+        - name: is_bigpicture
+          in: query
+          description: specify if the files belong to Big Picture project
+          schema:
+            type: boolean
       requestBody:
         content:
           application/json:
