# metadata_backend/api/handlers/files.py
@@ -50,6 +50,7 @@ class FilesAPIHandler(RESTAPIHandler):
         """
         db_client = request.app["db_client"]
         data = await self._get_data(request)
+        is_bigpicture = request.query.get("is_bigpicture", "").strip().lower() == "true"
 
         try:
             userId = data["userId"]
@@ -93,7 +94,7 @@ class FilesAPIHandler(RESTAPIHandler):
                     file["encrypted_checksums"],
                     file["unencrypted_checksums"],
                 )
-                file_object = await file_op.form_validated_file_object(new_file)
+                file_object = await file_op.form_validated_file_object(new_file, is_bigpicture)
                 validated_file_objects.append(file_object)
         except KeyError as file_key_error:
             reason = "Fields `path`, `name`, `bytes`, `encrypted_checksums`, `unencrypted_checksums` are required."
